Updated 04 Random Variables

--- a/04 Random Variables.ipynb
+++ b/04 Random Variables.ipynb
@@ -5,7 +5,7 @@
    "id": "d41fe488",
    "metadata": {},
    "source": [
-    "<img src='./fig/vertical_COMILLAS_COLOR.jpg' style= 'width:70mm'>\n",
+    "### <img src='./fig/vertical_COMILLAS_COLOR.jpg' style= 'width:70mm'>\n",
     "\n",
     "<h1 style='font-family: Optima;color:#ecac00'>\n",
     "Máster en Big Data. Tecnología y Analítica Avanzada (MBD).\n",
@@ -13,8 +13,7 @@
     "</h1>\n",
     "\n",
     "<h1 style='font-family: Optima;color:#ecac00'>\n",
-    "Fundamentos Matemáticos del Análisis de Datos (FMAD). 2022-2023.\n",
-    "<a class=\"tocSkip\">\n",
+    "Introducción al Análisis Estadístico con Lenguajes de Programación para Machine Learning (IAELPML). 2023-2024.\n",
     "</h1>\n",
     "\n",
     "<h1 style='font-family: Optima;color:#ecac00'>\n",
@@ -30,7 +29,7 @@
    "source": [
     "## <span style='background:yellow; color:red'> Remember:<a class=\"tocSkip\"> </span>     \n",
     "\n",
-    "+ Navigate to your `fmad2223` folder in the console/terminal.  \n",
+    "+ Navigate to your `IAELPMML` folder in the console/terminal.  \n",
     "+ Execute `git pull origin main` to update the code\n",
     "+ **Do not modify the files in that folder**, copy them elsewhere"
    ]
@@ -89,7 +88,7 @@
     "\\end{array}\n",
     "\\quad\\\\\n",
     "$$\n",
-    "    Those values that you clearly have in your mind are a **theoretical model** (your *prior*) of the outcome of this experiment. Of course, when we run the experiment and we get **empirical data** we do not expect the results to be a perfect match with the theory, because this is a **random experiment**. \n",
+    "Those values that you clearly have in your mind are a **theoretical model** (your *prior*) of the outcome of this experiment. Of course, when we run the experiment and we get **empirical data** we do not expect the results to be a perfect match with the theory, because this is a **random experiment**. \n",
     "\n",
     "+ And that is precisely the notion of a discrete random variable $X$: *a theoretical model for the outcome of a random experiment with a finite number of possible outcomes.* More precisely (from the mathematical point of view) the result of the experiment is a discrete/countable set.\n",
     "\n",
@@ -121,13 +120,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8e44263",
-   "metadata": {
-    "scrolled": false
-   },
+   "id": "0d490f7e",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# %load \"./exclude/S04-001.py\""
+    "# %load \"./exclude/ejercicios/S04-001.py\""
    ]
   },
   {
@@ -168,33 +165,20 @@
    "metadata": {},
    "source": [
     "+ Now, looking at the last formula, recall that the relative frequencies are closely related with probabilities. In fact, the idea of probability first appeared as a theoretical model of the relative frequency. And so if we want to give a theoretical definition of the mean or expectation of a discrete random variable the only sensible choice is this:\n",
-    "<p style='font-family: Optima;color:blue;background-color:#f0f0f5'>\n",
-    "$$\n",
-    "\\fbox{\n",
-    "$\n",
-    "\\quad\\\\\n",
-    "\\quad\\quad\\textbf{Mean of a Discrete Random Variable $X$ }\n",
-    "\\quad\\\\\n",
-    "\\mu = E(X) = x_1 p_1 + \\cdots + x_k p_k = \\sum_{i = 1}^k \\,x_i p_i\n",
-    "$\n",
-    "}\n",
-    "$$\n",
-    "</p> \n",
     "\n",
-    "  That is, we have simply replaced relative frequencies with probabilities to go from empirical to theoretical. A similar reasoning lead to this expression for the:\n",
-    "<p style='font-family: Optima;color:blue;background-color:#f0f0f5'>\n",
+    "**Mean of a Discrete Random Variable** $X$\n",
     "$$\n",
-    "\\fbox{\n",
-    "$\n",
-    "\\quad\\\\\n",
-    "\\quad\\quad\\quad\\quad\\textbf{Variance of a Discrete Random Variable $X$}\n",
-    "\\quad\\\\\n",
+    "\\mu = E(X) = x_1 p_1 + \\cdots + x_k p_k = \\sum_{i = 1}^k \\,x_i p_i\n",
+    "$$\n",
+    "\n",
+    "That is, we have simply replaced relative frequencies with probabilities to go from empirical to theoretical. A similar reasoning lead to this expression for the:\n",
+    "\n",
+    "**Variance of a Discrete Random Variable** $X$\n",
+    "$$\n",
     "\\sigma^2 = \\operatorname{Var}(X) = \n",
     "(x_1 - \\mu)^2 p_1 + \\cdots + (x_k - \\mu)^2 p_k = \\sum_{i = 1}^k \\,(x_i -\\mu)^2 p_i\n",
-    "$\n",
-    "}\n",
     "$$\n",
-    "</p> \n",
+    "\n",
     "\n",
     "  The positive square root $\\sigma$ of the variance is called the **standard deviation** of $X$."
    ]
@@ -216,7 +200,7 @@
    },
    "outputs": [],
    "source": [
-    "# %load \"./exclude/S04-002.py\""
+    "# %load \"./exclude/ejercicios/S04-002.py\""
    ]
   },
   {
@@ -239,10 +223,18 @@
    },
    "outputs": [],
    "source": [
+    "print(\"First we roll a honest dice\")\n",
     "values_X = np.arange(1, 7)\n",
     "probs_X = np.ones(shape = 6) / 6\n",
+    "print(probs_X)\n",
+    "print(np.random.choice(values_X, 10, p=probs_X))\n",
     "\n",
-    "np.random.choice(values_X, 10, p=probs_X)"
+    "print(\"Now let us load the dice giving the six a higher probability\")\n",
+    "probs_X_2 = probs_X.copy()\n",
+    "probs_X_2[5] = 3\n",
+    "probs_X_2 = probs_X_2 / probs_X_2.sum()\n",
+    "print(probs_X_2)\n",
+    "print(np.random.choice(values_X, 10, p=probs_X_2))"
    ]
   },
   {
@@ -423,7 +415,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %load \"./exclude/S04-003.py\""
+    "# %load \"./exclude/ejercicios/S04-003.py\""
    ]
   },
   {
@@ -434,22 +426,14 @@
     "### Probability Density for Binomial Variables\n",
     "\n",
     "+ The table of relative frequencies that you obtained in the previous exercise is an empirical approximation of the following expression for the following:\n",
-    "<p style='font-family: Optima;color:blue;background-color:#f0f0f5'>\n",
+    "\n",
+    "**Theoretical probability density of a binomial variable  $X\\sim B(n, p)$**\n",
     "$$\n",
-    "\\fbox{\n",
-    "$\n",
-    "\\quad\\\\\n",
-    "\\textbf{Theoretical probability density of a binomial variable }X\\sim B(n, p)\n",
-    "\\quad\\\\\n",
-    "\\quad\\quad\\quad\\quad\n",
     "P(X = k) =\\displaystyle\\binom{n}{k}\\,p^k\\,q^{(n -k)}\\quad\\text{ for }\\quad k = 0, 1, 2, \\ldots, n\n",
-    "$\n",
-    "}\n",
     "$$\n",
-    "</p>    \n",
     "where we recall $q = 1 - p$. Also the definition of the *binomial coefficient* is:\n",
     "$$\n",
-    "\\dbinom{n}{k} = \\frac{\\overbrace{n\\left( n-1\\right) \\left( n-2\\right) \\cdots \\left( n-k+1\\right) }^{k\\mbox{ factors}}}{k!}\n",
+    "\\dbinom{n}{k} = \\frac{\\overbrace{n\\left( n-1\\right) \\left( n-2\\right) \\cdots \\left( n-k+1\\right) }^{k\\text{ factors}}}{k!}\n",
     "$$\n",
     "where $k! = k\\cdot(k - 1)\\cdot(k - 2)\\cdot\\,\\cdots\\,\\cdot 2\\cdot 1$ is the factorial of $k$.\n",
     "\n",
@@ -676,7 +660,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %load \"./exclude/S04-004.py\""
+    "# %load \"./exclude/ejercicios/S04-004.py\""
    ]
   },
   {
@@ -874,23 +858,21 @@
     "+ A **(continuous) density function** has two properties:\n",
     "    + It is **non-negative:** $f(x)\\geq 0$ for all $x$.\n",
     "    + The **total area under $f(x)$ is 1**. That is:\n",
-    "    <p style='font-family: Optima;color:blue;background-color:#f0f0f5;width: 50%;'>\n",
+    "   \n",
     "    $$\n",
     "    \\quad\\\\\n",
     "    \\int_{-\\infty}^{\\infty}f(x)\\,dx=1\n",
     "    \\quad\\\\\n",
     "    $$\n",
-    "    </p>\n",
     "    In particular $f$ must be integrable, but we will not look into the technical meaning of that condition.\n",
     "\n",
     "+ Given a continuous density function we can use it to define a **continuous random variable $X$**, by saying that the probability of $X$ taking value in an interval $[a, b]$ is:\n",
-    "<p style='font-family: Optima;color:blue;background-color:#f0f0f5;width: 60%;'>\n",
     "$$\n",
     "\\quad\n",
     "P(a \\leq X \\leq b) = \\text{area under the graph of }f = \\int_a^bf(x)\\,dx.\n",
     "\\quad\n",
     "$$\n",
-    "</p>  \n"
+    "\n"
    ]
   },
   {
@@ -930,7 +912,6 @@
     "\\end{array}\n",
     "$$\n",
     "In the case of a continuous random variable $X$ with density function $f(x)$ we have\n",
-    "<p style='font-family: Optima;color:blue;background-color:#f0f0f5;width: 60%;'>\n",
     "$$\n",
     "\\quad\\\\\n",
     "\\begin{array}{l}\n",
@@ -939,7 +920,6 @@
     "\\end{array}\n",
     "\\quad\\\\\n",
     "$$\n",
-    "</p>\n",
     "\n",
     "Note that going from discrete to continuous is achieved by changing the sum for an integral and the probability $p_i$ for the *probability differential* $dp = f(x)\\, dx$, which represents the probability of and *infinitesimally small interval*.\n",
     "\n"
@@ -953,32 +933,26 @@
     "### The (Cumulative) Distribution Function of a Continuous Random Variable\n",
     "\n",
     "+ The distribution function for a random variable (discrete or continuous) is:\n",
-    "<p style='font-family: Optima;color:blue;background-color:#f0f0f5;width: 30%;'>\n",
     "$$\n",
     "\\quad\\\\\n",
     "F(k) = P(X \\leq k)\n",
     "\\quad\\\\\n",
     "$$\n",
-    "</p>\n",
     "and for a continuous random variable that turns out to be\n",
-    "<p style='font-family: Optima;color:blue;background-color:#f0f0f5;width: 30%;'>\n",
     "$$\n",
     "\\quad\\\\\n",
     "F(k) = \\int_{-\\infty}^{k}f(x)\\,dx\n",
     "\\quad\\\\\n",
     "$$\n",
-    "</p>\n",
     "\n",
     "+ For discrete random variables the distribution function looked like a stair. In the continuous case it is more like a ramp, climbing from 0 to 1 as $x$ moves left to right along the horizontal axis:\n",
     "![](./fig/04-06-FuncionDistribucionVariableContinuaTipica.png)\n",
     "Note that (unlike the density function) the values of the function are indeed probabilities (cumulative ones, of course). That is one of the reasons that make distribution functions useful:\n",
-    "<p style='font-family: Optima;color:blue;background-color:#f0f0f5;width: 30%'>\n",
     "$$\n",
     "\\quad\\\\\n",
     "P(a < X < b) = F(b) - F(a)\n",
     "\\quad\\\\\n",
-    "$$\n",
-    "</p>"
+    "$$\n"
    ]
   },
   {
@@ -992,7 +966,6 @@
     "(*Side Note:* sometimes people say \"all points are equally likely\" to describe the uniform distribution. But that is misleading because the probability of a single point is always zero in a continuous random variable, be it *uniform or not*).\n",
     "\n",
     "+ The density function of a uniform variable $X$ is therefore constant in the interval $[a, b]$ and zero elsewhere:\n",
-    "<p style='font-family: Optima;color:blue;background-color:#f0f0f5;width: 60%;'>\n",
     "$$\n",
     "\\quad\\\\\n",
     "f(x) = \n",
@@ -1001,8 +974,7 @@
     "0 & \\text{ otherwise }\\\\\n",
     "\\end{cases}\n",
     "\\quad\\\\\n",
-    "$$\n",
-    "</p>"
+    "$$\n"
    ]
   },
   {
@@ -1013,21 +985,17 @@
     "### Mean and Variance for Uniform Distributions\n",
     "\n",
     "+ The mean of a uniform variable is, as expected:\n",
-    "<p style='font-family: Optima;color:blue;background-color:#f0f0f5;width: 30%;'>\n",
     "$$\n",
     "\\quad\\\\\n",
     "\\mu = \\dfrac{a + b}{2}\n",
     "\\quad\\\\\n",
     "$$\n",
-    "</p>    \n",
     "and the variance is\n",
-    "<p style='font-family: Optima;color:blue;background-color:#f0f0f5;width: 30%;'>\n",
     "$$\n",
     "\\quad\\\\\n",
     "\\sigma^2 = \\dfrac{(b - a)^2}{12}\n",
     "\\quad\\\\\n",
-    "$$\n",
-    "</p>    "
+    "$$\n"
    ]
   },
   {
@@ -1098,7 +1066,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %load \"./exclude/S04-005.py\""
+    "# %load \"./exclude/ejercicios/S04-005.py\""
    ]
   },
   {
@@ -1309,7 +1277,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %load \"./exclude/S04-006.py\""
+    "# %load \"./exclude/ejercicios/S04-006.py\""
    ]
   },
   {
@@ -1376,7 +1344,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %load \"./exclude/S04-007.py\""
+    "# %load \"./exclude/ejercicios/S04-007.py\"\n",
+    "## Exercise S04-007\n",
+    "\n",
+    "# Let us generate a numpy (N x 2) array of normal random points (x, y) \n",
+    "# in [-1, 1]x[-1, 1]\n",
+    "N2 = 10000\n",
+    "a = -1\n",
+    "b =  1\n",
+    "XY2 = np.random.default_rng(2022).normal(loc = 0, scale = 0.25, size = (N2, 2))\n",
+    "n = N2\n",
+    "first_n = XY[0:n]\n",
+    "\n",
+    "# First plot the first N2 uniform points \n",
+    "fig, ax = plt.subplots()\n",
+    "sns.set(rc={'figure.figsize':(6, 6)})\n",
+    "ax.set_aspect('equal')\n",
+    "plt.scatter(x = XY[0:n, 0], y = XY[0:n, 1], s = 2, alpha = 0.5)\n",
+    "# then plot the random normal points\n",
+    "getPlot = plt.scatter(x = XY2[0:n, 0], y = XY2[0:n, 1], s = 2, color = \"red\", alpha = 0.5)\n",
+    "\n"
    ]
   },
   {
@@ -1393,20 +1380,17 @@
    "metadata": {},
    "source": [
     "+ If $X\\sim N(\\mu, \\sigma)$ is any normal variable, then the **standardized** variable\n",
-    "<p style='font-family: Optima;color:blue;background-color:#f0f0f5;width: 30%;'>\n",
     "$$\n",
     "\\quad\\\\\n",
     "Z=\\dfrac{X-\\mu}{\\sigma}\n",
     "\\quad\\\\\n",
     "$$\n",
-    "</p>\n",
     "\n",
     "  is always a normal variable of type $N(0, 1)$. This specially important normal variable with $\\mu = 0$ and $\\sigma = 1$ is called the  **standard normal** and is always denoted by $Z$ in Statistics. \n",
     "  \n",
     "+ Thus the process of standardization converts the values of any normal into values of $Z$. The standard normal $N(0, 1)$ can therefore be considered as a *universal scale* for all normal variables. If you need to understand how *typical* or *unexpected*  a value from a normal variable is, you just have to standardize it.\n",
     "\n",
     "+ The **68-95-99 Rule**. As a consequence of the above, whenever we work with normal variables we can be sure that these approximations always hold:\n",
-    "<p style='font-family: Optima;color:blue;background-color:#f0f0f5;width: 30%;'>\n",
     "$$\n",
     "\\quad\\\\\n",
     "\\begin{cases}\n",
@@ -1416,9 +1400,7 @@
     "\\end{cases}\n",
     "\\quad\\\\\n",
     "$$\n",
-    "</p>\n",
-    "  \n",
-    "  irrespective of the values of $\\sigma$ and $\\mu$. Going back to that idea of *universal probability scale* that means that if a value of a random variable is four or more sigmas away from the mean, it can positively be catalogued as *weird*."
+    "irrespective of the values of $\\sigma$ and $\\mu$. Going back to that idea of *universal probability scale* that means that if a value of a random variable is four or more sigmas away from the mean, it can positively be catalogued as *weird*."
    ]
   },
   {
@@ -1438,7 +1420,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %load \"./exclude/S04-008.py\""
+    "# %load \"./exclude/ejercicios/S04-008.py\""
    ]
   },
   {
@@ -1449,13 +1431,10 @@
     "### Sums of Normal Variables\n",
     "\n",
     "+ If $X_1\\sim N(\\mu_1,\\sigma_1)$ and $X_2\\sim N(\\mu_2,\\sigma_2)$ are  **independent normal variables**, then their sum is **also a normal variable** of type:\n",
-    "<p style='color:blue;background-color:#f0f0f5;width: 30%;'>\n",
     "$$\n",
     "N\\left(\\mu_1+\\mu_2,\\sqrt{\\rule{0cm}{0.5cm}\\sigma_1^2+\\sigma_2^2}\\right)\n",
     "$$\n",
-    "</p>\n",
-    "  \n",
-    "  We emphasize that the important thing here is the fact that the sum is also normal. If you e.g. sum independent binomials you will not get a new binomial. This property generalizes to the sum of $k$ independent normals that again result in a normal of type:\n",
+    "We emphasize that the important thing here is the fact that the sum is also normal. If you e.g. sum independent binomials you will not get a new binomial. This property generalizes to the sum of $k$ independent normals that again result in a normal of type:\n",
     "$${N}\\left(\\mu_1+\\cdots+\\mu_k,\\sqrt{\\rule{0cm}{0.5cm}\\sigma_1^2+\\cdots+\\sigma_k^2}\\right).$$  \n",
     "\n",
     "+ The **mixture** of random normals is an entirely different process, which often results in multimodal variables. "
@@ -1481,18 +1460,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %load \"./exclude/S04-009.py\""
+    "# %load \"./exclude/ejercicios/S04-009.py\""
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "956d83b1",
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -1511,7 +1480,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.8.13"
   },
   "toc": {
    "base_numbering": 1,
