update chapter 06 notebook

--- a/06 Hypothesis Tests.ipynb
+++ b/06 Hypothesis Tests.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "947ff5e9",
    "metadata": {},
    "outputs": [],
@@ -156,10 +156,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "1ab42283",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Z score for this sample is 3.0\n",
+      "And the resulting p-value is: 0.00135\n"
+     ]
+    }
+   ],
    "source": [
     "mu0 = 2.5\n",
     "n = 100\n",
@@ -194,10 +203,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "ab15880e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Z score for this sample is 4.0\n",
+      "And the resulting p-value is: 3.167e-05\n"
+     ]
+    }
+   ],
    "source": [
     "mu0 = 2.5\n",
     "n = 100\n",
@@ -256,10 +274,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "89934e5a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Z score for this sample is 0.2\n",
+      "And the resulting p-value is: 0.4207\n"
+     ]
+    }
+   ],
    "source": [
     "mu0 = 2.5\n",
     "n = 100\n",
@@ -286,10 +313,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "9d74241b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Z score for this sample is -1.0\n",
+      "And the resulting p-value is: 0.8413\n"
+     ]
+    }
+   ],
    "source": [
     "mu0 = 2.5\n",
     "n = 100\n",
@@ -347,10 +383,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "2cfab777",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The t score for this sample is 1.342\n",
+      "And the resulting p-value is: 0.09776\n"
+     ]
+    }
+   ],
    "source": [
     "mu0 = 2.5\n",
     "n = 20\n",
@@ -405,10 +450,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "ea970531",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sample size is  10\n",
+      "The sample mean is 0.046\n",
+      "The T score is 3.073\n",
+      "And the corresponding p-value is 0.006646\n"
+     ]
+    }
+   ],
    "source": [
     "no2_data = np.array([0.04, 0.05, 0.03, 0.06, 0.04, 0.06, 0.07, \n",
     "                     0.03, 0.06, 0.02])\n",
@@ -452,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "b73671b8",
    "metadata": {},
    "outputs": [],
@@ -487,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "73aa7ac8",
    "metadata": {},
    "outputs": [],
@@ -523,10 +579,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "c406e032",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Z score for this sample is -2.497\n",
+      "The critical value (defining the rejection region) is: -1.645\n",
+      "And the resulting p-value is: 0.006271\n"
+     ]
+    }
+   ],
    "source": [
     "Zscore = (barX - mu0)/(s/np.sqrt(n))\n",
     "print(\"The Z score for this sample is {:.4}\".format(Zscore))\n",
@@ -551,10 +617,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "51d2dd8f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The absolute value of the Z score for this sample is 2.497\n",
+      "And the resulting p-value is: 0.006271\n"
+     ]
+    }
+   ],
    "source": [
     "Zscore = np.abs((barX - mu0)/(s/np.sqrt(n)))\n",
     "print(\"The absolute value of the Z score for this sample is {:.4}\".format(Zscore))\n",
@@ -607,10 +682,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "ba3b9e2e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The absolute value of the Z score for this sample is 2.497\n",
+      "The right side critical value is: 1.96\n",
+      "And the resulting p-value is: 0.01254\n"
+     ]
+    }
+   ],
    "source": [
     "Zscore = np.abs((barX - mu0)/(s/np.sqrt(n)))\n",
     "print(\"The absolute value of the Z score for this sample is {:.4}\".format(Zscore))\n",
@@ -847,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "9c38f4a9",
    "metadata": {},
    "outputs": [],
@@ -868,10 +953,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "7bdffeb7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The power for the test is 0.634\n"
+     ]
+    }
+   ],
    "source": [
     "import statsmodels.stats.power as smp\n",
     "\n",
@@ -891,10 +984,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "1b632360",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The minimum sample size to get that power is at least 156\n"
+     ]
+    }
+   ],
    "source": [
     "power = 0.8\n",
     "\n",
@@ -962,10 +1063,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "f6d03b5d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The p-value for the test is 0.0169\n"
+     ]
+    }
+   ],
    "source": [
     "# Sample values\n",
     "n = 15\n",
@@ -995,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "a532d876",
    "metadata": {},
    "outputs": [],
@@ -1027,10 +1136,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "c406b41d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The probability of making at least a Type I error in 20 independent tests is 0.642\n"
+     ]
+    }
+   ],
    "source": [
     "n = 20\n",
     "p = 0.05\n",
@@ -1062,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "816a4651",
    "metadata": {},
    "outputs": [],
@@ -1094,7 +1211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "e27f2915",
    "metadata": {},
    "outputs": [],
@@ -1124,10 +1241,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "ffe77fba",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The t score for this sample is 0.0825\n",
+      "And the resulting p-value is: 0.9346\n"
+     ]
+    }
+   ],
    "source": [
     "n = 50\n",
     "dof = n - 1\n",
@@ -1156,10 +1282,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "e1a26424",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The t score for this sample is 2.609\n",
+      "And the resulting p-value is: 0.00909\n"
+     ]
+    }
+   ],
    "source": [
     "n = 50000\n",
     "dof = n - 1\n",
@@ -1216,7 +1351,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.18"
   },
   "toc": {
    "base_numbering": 1,
